--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.192",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-mathjax": "^1.0.1",
     "function-plot": "^1.23.2",
     "lodash": "^4.17.21",
+    "mathjax-react": "^2.0.1",
+    "mathjs": "^11.8.0",
+    "mathjs-simple-integral": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-mathjax": "^1.0.1",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "string.prototype.replaceall": "^1.0.7",
     "typescript": "^4.4.2",
+    "validate.js": "^0.13.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -63,6 +69,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "react-test-renderer": "^18.2.0"
   }
 }
